# insight-hub

./: .env  docker-compose.yml  dockerfile  pyproject.toml  test.db
backend/: create_tables.py  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  datapoints.py  health.py  indicators.py  indicators_sync.py  users.py
backend/app/clients/: bcb_client.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  datapoint.py  indicator.py  user.py
backend/app/middlewares/: exception_handler.py  logging.py  request_id.py
backend/app/repositories/: __init__.py  datapoint.py  indicator.py  user.py
backend/app/schemas/: __init__.py  datapoint.py  indicator.py  user.py
backend/app/services/: bcb_service.py
backend/tests/: conftest.py  test_auth.py  test_users.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx
frontend/src/routes/: PrivateRoute.tsx
frontend/src/services/: api.ts
